--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ dependencies {
     implementation 'org.codehaus.groovy:groovy-all:3.0.5'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation(
+            'org.hamcrest:hamcrest-library:2.2'
+    )
 }
 
 test {
